src/objects/ServiceTerritory.object
<CustomObject>
    <fields>
        <fullName>FSL__Hide_Emergency_Map__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the map will be shown on the emergency wizard</description>
        <label>Hide Emergency Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Internal_SLR_Geolocation__c</fullName>
        <label>Internal SLR HomeAddress Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>FSL__NumberOfServicesToDripFeed__c</fullName>
        <label>Number Of Services To Drip Feed</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Service_Cluster_Min_Size__c</fullName>
        <label>Service Cluster Min Size (Closed Pilot)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Service_Cluster_Proximity__c</fullName>
        <label>Service Cluster Proximity (Closed Pilot)</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__System_Jobs__c</fullName>
        <label>System Jobs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BATCH_ServicesInJeopardy</fullName>
                </value>
                <value>
                    <fullName>BATCH_ServicesDispatched</fullName>
                </value>
                <value>
                    <fullName>ChatterNotification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__TerritoryLevel__c</fullName>
        <label>Territory Level</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TDS_SEL_Provincia__c</fullName>
        <label>Provincia</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Provincias</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TDS_TXT_Identificador__c</fullName>
        <description>Identificador externo y exclusivo que se informará con el nombre del territorio</description>
        <externalId>true</externalId>
        <label>Identificador</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>All_ServiceTerritories</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos territorios de servicios</label>
    </listViews>
    <listViews>
        <fullName>My_ServiceTerritories</fullName>
        <filterScope>Mine</filterScope>
        <label>Mis territorios de servicios</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Editar_campo_identificador</fullName>
        <active>true</active>
        <description>El campo identificador  no puede ser modificado</description>
        <errorConditionFormula>IF(AND(ISCHANGED(TDS_TXT_Identificador__c ),TDS_TXT_Identificador__c  &lt;&gt; Name ), true, false)</errorConditionFormula>
        <errorMessage>El campo identificador  no puede ser modificado</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Requerimiento_del_Codigo_Postal</fullName>
        <active>true</active>
        <description>Regla de validación para requerir el código postal</description>
        <errorConditionFormula>IF(OR(ISBLANK(ParentTerritoryId),ISNULL(ParentTerritoryId)),Null,OR(ISBLANK(PostalCode),ISNULL(PostalCode)))</errorConditionFormula>
        <errorDisplayField>PostalCode</errorDisplayField>
        <errorMessage>El campo Código Postal es requerido</errorMessage>
    </validationRules>
</CustomObject>